syntax = "proto3";
import "google/api/annotations.proto";

package auth;
option go_package = "/auth";

service Auth{
  rpc Login(LoginRequest) returns (UserResponse){
    option (google.api.http) = {
      get: "/authorization/user/login"
    };
  };
  rpc Refresh(RefreshRequest) returns (UserResponse){
    option (google.api.http) = {
      get: "/authorization/user/refresh"
    };
  };
}


message LoginRequest {
  string name = 1;
  string password = 2;
}

message RefreshRequest {
  string refresh_token = 1;
}

message UserResponse {
  string access_token = 1;
  string refresh_token = 2;

  int32 id = 10;
  string name = 11;
  string telephone = 12;
  repeated string roles = 13;
  repeated string permissions = 14 ;
}

